// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MpxInput should handle MPX selection properties 1`] = `
<TextInput
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue=""
  editable={true}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={140}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  selection={
    {
      "end": 5,
      "start": 0,
    }
  }
  style={
    {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  testID="selection-input"
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value=""
/>
`;

exports[`MpxInput should handle basic props, input types and constraints 1`] = `
<TextInput
  allowFontScaling={false}
  autoFocus={false}
  blurOnSubmit={true}
  defaultValue="test"
  editable={false}
  enterKeyHint="done"
  keyboardType="default"
  maxLength={10}
  maxlength={10}
  multiline={false}
  onBlur={[Function]}
  onChange={[Function]}
  onContentSizeChange={[Function]}
  onFocus={[Function]}
  onSelectionChange={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  secureTextEntry={false}
  style={
    {
      "backgroundColor": "#fff",
      "padding": 0,
    }
  }
  testID="basic-input"
  textAlignVertical="auto"
  underlineColorAndroid="rgba(0,0,0,0)"
  value="test"
/>
`;
